# StatePatternFramework

./: CMakeLists.txt  State_Pattern.sln  State_Pattern_Framework.vcxproj  State_Pattern_Framework.vcxproj.filters
Headers/: EntidadBase.h  EntidadEscena.h  Game.h  Vehiculo.h
Source/: EnrutadorMensajes.cpp  EntidadBase.cpp  EntidadEscena.cpp  Game.cpp  Matematica.cpp  SteeringBehaviors.cpp  Vehiculo.cpp
